css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');

/* Default for small mobile screens */

body {
    font-family: 'Nunito', 'sans-serif';
    font-weight: 500;
    color: #ffffff;
    background-color: #121212;
    
    display: flex;
    margin: 0;
}

p {
    margin: .15em 0px
}

img {
    max-width: 100%;
    display: block;
}


#navbar {
	position: fixed;
	top: 0;
    z-index: 99;
    height: 100px;
    width: 100%;
    padding-left: 10vw;
    background: -webkit-linear-gradient(#0a0a0a, #0a0a0a00);
}

#content {
    flex: 1 0 auto;
    padding-top: calc(100px + 5vh);
    justify-content: center;
}

#headline {
    padding-left: 10vw;
    min-height: 400px;
}

#underscore {
    position: relative;
    top: -0.04em;
    left: 0.1em;
}


.narrow {
    font-weight: 300;
}
.bold {
    font-weight: 700;
}

.small-font {
    font-size: 4vw;
}
.medium-font {
    font-size: 8vw;
}
.big-font {
    font-size: 16vw;
}

.center {
    align-content: center;
}

.highlight {
    background: -webkit-linear-gradient(90deg, #AE8625, #F7EF8A 45%, #D2AC47 80%, #EDC967);
    background-clip: border-box;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin: 0;
}

.paragraph-1 {
    font-size: 4vw;
    color: #cccccc;
    max-width: 80%;
}

/* Cards */
.card-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.card {
    margin: 22px 15px 23px 15px;
    width: 150px;
    height: 250px;
    border-radius: 15px;
}

.gradient {
    background-color: #ff404d;
    background-image:  
        radial-gradient(at 40% 20%, hsl(28,100%,74%) 0, transparent 60%),  
        radial-gradient(at 80% 0%, hsl(189,100%,56%) 0, transparent 60%),  
        radial-gradient(at 0% 50%, hsl(355,85%,93%) 0, transparent 60%),  
        radial-gradient(at 80% 50%, hsl(340,100%,76%) 0, transparent 60%),  
        radial-gradient(at 0% 100%, hsl(22,100%,77%) 0, transparent 60%),  
        radial-gradient(at 80% 100%, hsl(242,100%,70%) 0, transparent 60%),  
        radial-gradient(at 0% 0%, hsl(343,100%,76%) 0, transparent 60%);;
}

.zoom {
    background-color: white;
    transition: transform .2s;
  }
  
.zoom:hover {
    transform: scale(1.25);
}

/* Large screens */
@media only screen and (min-width: 786px) {    
    .small-font {
        font-size: 3vw;
    }
    .medium-font {
        font-size: 4vw;
    }
    .big-font {
        font-size: 8vw;
    }   
    
    .paragraph-1 {
        font-size: 2vw;
        color: #cccccc;
        max-width: 40%;
    }
}

